Fixed tag button overflow onto next line

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -233,6 +233,8 @@ a {
         }
         .delete_tag_btn {
           color: @grayLight;
+          position: absolute;
+          right: 2px;
           &:hover {
             color: @gray;
           }
@@ -425,15 +427,16 @@ a {
 .tag_icon:focus .yellow { color: yellow; }
 
 .tag_label{
-  font-size: 1.5em;
+  font-size: 1em;
   vertical-align: center;
   margin-left: 5px;
   margin-top: 5px;
-  max-width: 100px;
+  max-width: 80px;
   margin-bottom: 5px;
 }
 
 span.tag_label{
+  margin-top: 10px;
   max-width: 50px;
 }
 
